2006-02-22  Joerg Rosenkranz <joergr@voelcker.com>

	* MonoIO.cs, MonoIOError.cs: Verbose exception for error 39 
	  (disk full).
	  
2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* Stream.cs FileStream.cs: Add new 2.0 Dispose () method and protected
	Dispose (bool) method.

2006-01-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TextWriter.cs: Dispose () is public in 2.0.

2006-01-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnexceptionalStreamReader.cs: Read (char,int,int) should not
	return -1. Thanks to Jakob Berkman.

2006-01-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StreamReader.cs: (ReadToEnd) if Read returns -1 or 0, we're done.

2006-01-18  Atsushi Enomoto  <atsushi@ximian.com>

	* Path.cs : (GetRandomFileName) use random buffer ;-) It somehow
	  caused infinite loop on Windows.

2006-01-18  Atsushi Enomoto  <atsushi@ximian.com>

	* DirectoryInfo.cs : on Windows top directory is something like c:\.

2006-01-17  Joshua Tauberer  <tauberer@for.net>

	* StreamReader.cs: Avoid two totally unnecessary string creations.
	  (kind of pedantic)

2006-01-13  Ben Maurer  <bmaurer@andrew.cmu.edu>

	* TextWriter.cs: Call char[],int,int from the Write(char[]) method
	both for msft compat and for performance. Thanks to "Mike Glenn" 
	<mglenn@zoominternet.net> for pointing.

2006-01-12  Ben Maurer  <bmaurer@andrew.cmu.edu>

	* File.cs: Support for Read/WriteAllText

2006-01-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Path.cs: Previous fix caused regression of bug #76191. Fixed (again)

2006-01-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Path.cs: Fix c14n on Windows when the first separator after the root
	isn't '\'. Fix problems for XSP with 1.1.13.

2006-01-07  Miguel de Icaza  <miguel@novell.com>

	* Path.cs (GetTempFilename): Append ".tmp" to the path, some
	external application expect this extension.

2006-01-05  Kornél Pál  <kornelpal@hotmail.com>

	* DriveNotFoundException.cs: Added.